# huobi_futures_Cpp

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
huobi_futures/: CMakeLists.txt
huobi_futures/json_struct/: json_struct.h
huobi_futures/linear_swap/restful/: AccountClient.hpp  MarketClient.hpp  OrderClient.hpp  TransferClient.hpp  TriggerOrderClient.hpp
huobi_futures/linear_swap/restful/request/order/: PlaceOrderRequest.hpp
huobi_futures/linear_swap/restful/response/account/: CrossGetUserSettlementRecordsResponse.hpp  GetAccountInfoResponse.hpp  GetAccountPositionResponse.hpp  GetAccountPositionSingleResponse.hpp  GetApiTradingStatusResponse.hpp  GetAvailableLevelRateResponse.hpp  GetBalanceValuationResponse.hpp  GetFeeResponse.hpp  GetFinancialRecordExactResponse.hpp  GetFinancialRecordResponse.hpp  GetMasterSubTransferRecordResponse.hpp  (+10 more)
huobi_futures/linear_swap/ws/: WSIndexClinet.hpp  WSMarketClinet.hpp  WSNotifyClinet.hpp  WSSystemClient.hpp  WebSocketOp.hpp
huobi_futures/nlohmann_json/: json.hpp
huobi_futures/url_base/: HttpRequest.hpp  PrivateUrlBuilder.hpp  PublicUrlBuilder.hpp
huobi_futures/utils/: Signer.hpp  base64.hpp  const_val.hpp  convert.hpp  gzip.hpp
huobi_futures/wsbase/: WSAuthDate.hpp  WSOpData.hpp  WSReqData.hpp  WSSubData.hpp  WSUnsubData.hpp  WebSocket.hpp
test/: CMakeLists.txt  config.hpp  main.cpp  restful_account_test.hpp  restful_market_test.hpp  restful_order_test.hpp  restful_transfer_test.hpp  restful_trigger_order_test.hpp  ws_index_test.hpp  ws_market_test.hpp  ws_notify_test.hpp  ws_system_test.hpp
(+68 files in other folders)
